--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/login.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/login.fxml
@@ -37,8 +37,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -82,38 +80,24 @@
             </HBox>
          </children>
       </VBox>
-      <GridPane alignment="BOTTOM_CENTER" maxHeight="90.0" minHeight="90.0" prefHeight="159.0" prefWidth="1067.0" style="-fx-background-color: #000000;">
+      <GridPane alignment="BOTTOM_CENTER" maxHeight="90.0" minHeight="64.0" prefHeight="64.0" prefWidth="1920.0" style="-fx-background-color: white;">
          <columnConstraints>
-            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="582.0" minWidth="10.0" prefWidth="567.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1306.0" minWidth="10.0" prefWidth="693.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="1615.0" minWidth="10.0" prefWidth="660.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="43.0" prefWidth="284.0" style="-fx-background-color: #000000; -fx-font-size: 18px;" text="Nicht angemeldet" textFill="WHITE" GridPane.halignment="LEFT">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="70.0" />
-               </GridPane.margin>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#exitButton" prefHeight="39.0" prefWidth="161.0" style="-fx-background-color: #a82b2b; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Schließen" textFill="WHITE" GridPane.columnIndex="3">
-               <GridPane.margin>
-                  <Insets right="40.0" />
-               </GridPane.margin>
-            </Button>
-            <ImageView fitHeight="55.0" fitWidth="55.0" GridPane.halignment="LEFT">
-               <image>
-                  <Image url="@../../../../../../../../../Downloads/%5BCITYPNG.COM%5DSettings%20White%20Outline%20Icon%20Download%20PNG%20-%201124x1124.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets left="20.0" />
-               </GridPane.margin>
-            </ImageView>
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="15.0" GridPane.columnIndex="2">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#exitButton" prefHeight="39.0" prefWidth="41.0" styleClass="exitBtn" stylesheets="@styles.css" textFill="WHITE" />
+               </children>
+               <padding>
+                  <Insets right="20.0" />
+               </padding>
+            </HBox>
          </children>
       </GridPane>
    </children>
