--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
@@ -119,7 +119,7 @@
 }
 
 .resetCategory {
-    -fx-background-image: url("https://i.imgur.com/oBmlDzJ.png");
+    -fx-background-image: url("https://imgur.com/UywyA7D.png");
     -fx-font-size: 15;
     -fx-background-repeat: no-repeat;
     -fx-background-size: contain;
