--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -136,7 +136,10 @@
                                  <TextField fx:id="newProductPrice" prefHeight="25.0" prefWidth="600.0" promptText="Neuer Preis" />
                                  <ChoiceBox fx:id="categoryBoxSettings" prefHeight="32.0" prefWidth="240.0" />
                               </VBox>
-                              <Button fx:id="resetCategoryTrash" mnemonicParsing="false" onAction="#clearCategoryInSettings" prefHeight="33.0" prefWidth="22.0" styleClass="resetButton" stylesheets="@styles.css" />
+                              <Button fx:id="resetCategoryTrash" mnemonicParsing="false" onAction="#clearCategoryInSettings" prefHeight="33.0" prefWidth="22.0" styleClass="resetButton" stylesheets="@styles.css">
+                                 <HBox.margin>
+                                    <Insets top="148.0" />
+                                 </HBox.margin></Button>
                            </children>
                         </HBox>
                         <HBox prefHeight="100.0" prefWidth="200.0" spacing="15.0">
@@ -496,10 +499,13 @@
          </AnchorPane>
          <AnchorPane prefHeight="464.0" prefWidth="479.0" style="-fx-background-color: white; -fx-border-radius: 50%;">
             <VBox fx:id="emptyReceiptPane" alignment="CENTER" prefHeight="333.0" prefWidth="444.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <Pane prefHeight="183.0" prefWidth="479.0" styleClass="noReceipt" stylesheets="@styles.css" />
+               <Pane prefHeight="183.0" prefWidth="479.0" styleClass="noReceipt" stylesheets="@styles.css">
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin></Pane>
                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 400; -fx-font-size: 18;" text="Keine Produkte vorhanden" textAlignment="CENTER" wrappingWidth="215.0">
                   <VBox.margin>
-                     <Insets bottom="30.0" />
+                     <Insets bottom="225.0" />
                   </VBox.margin></Text>
             </VBox>
             <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
