Tables List View completely reworked. To-do: implement table "visitors" in tables class, create pop-ups

--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
@@ -8,6 +8,27 @@
 
 }
 
+.tablePane {
+    -fx-border-radius: 26;
+    -fx-background-color: black;
+    -fx-background-radius: 26;
+}
+
+.tableText {
+    -fx-text-fill: white;
+    -fx-font-size: 16;
+}
+
+.orange {
+    -fx-background-color: #609673;
+}
+
+.visitorIcon{
+    -fx-background-image: url("https://i.imgur.com/yidosug.png");
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center center;
+}
+
 .settingsBtn {
     -fx-font-size: 12;
     -fx-background-color: #D9D9D9;
