--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -24,14 +24,23 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.xsolutions.AppController">
    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <HBox prefHeight="984.0" prefWidth="1680.0" VBox.vgrow="ALWAYS">
-         <AnchorPane prefHeight="990.0" prefWidth="234.0" style="-fx-background-color: white;" styleClass="text" stylesheets="@styles.css">
-            <ListView fx:id="tablesListView" fixedCellSize="40.0" layoutY="62.0" prefHeight="900.0" prefWidth="234.0" style="-fx-background-color: white; -fx-font-size: 15px;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="62.0" />
-            <Label layoutX="89.0" layoutY="15.0" prefHeight="36.0" prefWidth="66.0" styleClass="text" stylesheets="@styles.css" text="Tische" AnchorPane.leftAnchor="89.0" AnchorPane.topAnchor="15.0">
-               <font>
-                  <Font size="22.0" />
-               </font>
-            </Label>
-            <Pane layoutX="55.0" layoutY="14.0" prefHeight="39.0" prefWidth="34.0" styleClass="table" stylesheets="@styles.css" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="14.0" />
+         <AnchorPane prefHeight="1016.0" prefWidth="390.0" style="-fx-background-color: white;" styleClass="text" stylesheets="@styles.css">
+            <ScrollPane prefHeight="1016.0" prefWidth="349.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <content>
+                  <GridPane fx:id="tablesGridPane" hgap="20.0" prefHeight="1014.0" prefWidth="345.0" stylesheets="@styles.css" vgap="20.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="ALWAYS" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
+                        <ColumnConstraints hgrow="ALWAYS" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="150.0" minHeight="150.0" prefHeight="150.0" vgrow="ALWAYS" />
+                     </rowConstraints>
+                     <padding>
+                        <Insets bottom="20.0" left="13.0" right="12.0" top="20.0" />
+                     </padding>
+                  </GridPane>
+               </content>
+            </ScrollPane>
          </AnchorPane>
          <AnchorPane prefHeight="990.0" prefWidth="1129.0" HBox.hgrow="ALWAYS">
             <AnchorPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -435,8 +444,8 @@
                   <AnchorPane prefHeight="44.0" prefWidth="909.0" style="-fx-background-color: white;">
                      <GridPane alignment="CENTER" minWidth="62.0" prefHeight="62.0" prefWidth="868.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0">
                         <columnConstraints>
-                           <ColumnConstraints fillWidth="false" hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
-                           <ColumnConstraints hgrow="ALWAYS" maxWidth="1002.0" minWidth="10.0" prefWidth="882.0" />
+                           <ColumnConstraints fillWidth="false" hgrow="NEVER" maxWidth="154.0" minWidth="10.0" prefWidth="154.0" />
+                           <ColumnConstraints hgrow="ALWAYS" maxWidth="1002.0" minWidth="10.0" prefWidth="711.0" />
                            <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" maxWidth="362.0" minWidth="10.0" prefWidth="199.0" />
                         </columnConstraints>
                         <rowConstraints>
@@ -475,7 +484,7 @@
                      </GridPane>
                   </AnchorPane>
                   <ScrollPane fx:id="ScrollPaneProducts" prefHeight="954.0" prefWidth="1207.0" styleClass="productsScroll" stylesheets="@styles.css">
-                     <HBox alignment="TOP_CENTER" prefHeight="930.0" prefWidth="1184.0">
+                     <HBox alignment="TOP_CENTER" prefHeight="930.0" prefWidth="1084.0">
                         <children>
                            <GridPane fx:id="GridPaneProducts" hgap="20.0" prefHeight="891.0" prefWidth="1018.0" stylesheets="@styles.css" vgap="20.0">
                               <columnConstraints>
@@ -507,22 +516,22 @@
             </VBox>
             <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" />
+                  <Insets bottom="10.0" left="20.0" right="20.0" />
                </padding>
-               <VBox prefHeight="76.0" prefWidth="439.0">
-                  <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefHeight="20.0" prefWidth="439.0" VBox.vgrow="ALWAYS">
+               <VBox prefHeight="76.0" prefWidth="447.0">
+                  <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefHeight="62.0" prefWidth="430.0" VBox.vgrow="ALWAYS">
                      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="34.0" styleClass="table" stylesheets="@styles.css" />
-                     <Text fx:id="tableNumberText" strokeType="OUTSIDE" strokeWidth="0.0" text="Tisch:" wrappingWidth="77.220703125">
+                     <Text fx:id="tableNumberText" strokeType="OUTSIDE" strokeWidth="0.0" text="Tisch:" wrappingWidth="127.220703125">
                         <font>
                            <Font size="18.0" />
                         </font>
                      </Text>
-                     <Label alignment="CENTER" prefHeight="36.0" prefWidth="139.0" styleClass="text" stylesheets="@styles.css" text="Rechnung" textAlignment="CENTER">
+                     <Label alignment="CENTER" prefHeight="36.0" prefWidth="100.0" styleClass="text" stylesheets="@styles.css" text="Rechnung" textAlignment="CENTER">
                         <font>
                            <Font size="22.0" />
                         </font>
                         <HBox.margin>
-                           <Insets left="40.0" />
+                           <Insets />
                         </HBox.margin>
                      </Label>
                      <Button fx:id="resetBill" mnemonicParsing="false" onAction="#resetBill" prefHeight="33.0" prefWidth="22.0" styleClass="resetButton" stylesheets="@styles.css">
@@ -544,7 +553,7 @@
                      <Insets bottom="13.0" />
                   </padding>
                </VBox>
-               <ScrollPane fx:id="billScroll" prefHeight="18.0" prefWidth="439.0" styleClass="resetScrollPane" stylesheets="@styles.css" VBox.vgrow="ALWAYS">
+               <ScrollPane fx:id="billScroll" prefHeight="744.0" prefWidth="413.0" styleClass="resetScrollPane" stylesheets="@styles.css" VBox.vgrow="ALWAYS">
                   <VBox.margin>
                      <Insets top="5.0" />
                   </VBox.margin>
@@ -648,6 +657,7 @@
       </GridPane>
    </VBox>
    <FlowPane fx:id="paymentMethodsPane" alignment="CENTER" columnHalignment="CENTER" prefHeight="1080.0" prefWidth="1394.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ListView fx:id="tablesListView" prefHeight="67.0" prefWidth="200.0" />
       <Pane prefHeight="1082.0" prefWidth="1921.0">
          <Pane opacity="0.62" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: black;" />
          <Pane fx:id="paymentSelectionPane" layoutX="626.0" layoutY="321.0" prefHeight="438.0" prefWidth="669.0" styleClass="paymentPane" stylesheets="@styles.css">
