added transition animation and changed gui a bit

--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
@@ -19,8 +19,8 @@
     -fx-font-size: 16;
 }
 
-.orange {
-    -fx-background-color: #609673;
+.green {
+    -fx-background-color: #01511d;
 }
 
 .visitorIcon{
