--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -414,8 +414,11 @@
                         <children>
                            <HBox prefHeight="33.0" prefWidth="1167.0">
                               <children>
-                                 <Label minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="200.0" style="-fx-font-size: 18; -fx-font-weight: 700;" text="Kategorien bearbeiten:" />
-                                 <Button fx:id="resetCategorySettings" mnemonicParsing="false" onAction="#clearCategoryInSettings" prefHeight="33.0" prefWidth="22.0" styleClass="resetCategory" stylesheets="@styles.css" />
+                                 <Label minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="200.0" style="-fx-font-size: 18; -fx-font-weight: 700;" text="Kategorien bearbeiten" />
+                                 <Button fx:id="resetCategorySettings" mnemonicParsing="false" onAction="#clearCategoryInSettings" prefHeight="33.0" prefWidth="22.0" styleClass="resetCategory" stylesheets="@styles.css">
+                                    <HBox.margin>
+                                       <Insets left="5.0" />
+                                    </HBox.margin></Button>
                               </children>
                            </HBox>
                            <ListView fx:id="categoryListView" minHeight="-Infinity" minWidth="-Infinity" prefHeight="311.0" prefWidth="828.0" />
