--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
@@ -67,8 +67,6 @@
 }
 
 .product-vbox {
-  -fx-background-radius: 8 8 0 0;
-  -fx-border-radius: 8 8 0 0;
   -fx-background-color: white;
   -fx-background-radius: 8;
   -fx-border-radius: 8;
@@ -104,6 +102,18 @@
     -fx-background-repeat: no-repeat;
     -fx-background-size: 23 24, cover;
     -fx-background-position: center center;
+}
+
+.minusWhite {
+    -fx-background-color: transparent;
+    -fx-background-repeat: no-repeat;
+    -fx-background-image: url("https://i.imgur.com/PnpgNe1.png");
+}
+
+.plusWhite {
+    -fx-background-color: transparent;
+    -fx-background-repeat: no-repeat;
+    -fx-background-image: url("https://i.imgur.com/BGfmDk4.png");
 }
 
 .paymentMethodButton {
